--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
@@ -65,6 +66,5 @@
     "@storybook/testing-library": "^0.0.9",
     "webpack": "^5.70.0",
     "prettier": "2.6.1"
-
   }
 }
