--- a/web/package.json
+++ b/web/package.json
@@ -19,8 +19,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set REACT_APP_API_URL=production && react-scripts start",
+    "prod": "npm run start",
     "local": "set REACT_APP_API_URL=local && react-scripts start",
+    "start": "set REACT_APP_API_URL=production && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
