--- a/web/package.json
+++ b/web/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://pdybowski.github.io/shop",
   "name": "web",
   "version": "0.1.0",
   "private": true,
@@ -19,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "prod": "npm run start",
     "local": "set REACT_APP_API_URL=local && react-scripts start",
     "start": "set REACT_APP_API_URL=production && react-scripts start",
@@ -68,6 +71,7 @@
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
     "prettier": "2.6.1",
-    "webpack": "^5.70.0"
+    "webpack": "^5.70.0",
+    "gh-pages": "^3.2.3"
   }
 }
