--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -9,7 +9,9 @@
     "rootDir": "src",
     "outDir": "dist",
     "lib": ["esnext", "dom", "es2016", "esnext.asynciterable"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "strictNullChecks": true
+
 },
 "exclude": ["node_modules"]
 }
